# scad-tidy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_dependencies.md  README_docker.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/scad_common/error/: ErrorCode.hpp
include/scad_common/linter/: LinterRules.hpp
include/scad_formatter/: Formatter.hpp
include/scad_linter/: Linter.hpp  ScadLinter.h
include/scad_utility/: combine_enum.hpp  pointer_types.hpp  string.hpp  utility.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cli/src/cli/: MainCLI.cpp  MainCLI.h  MainCLI.hpp
src/cli/src/cli/command/: CommandConcept.hpp  CommandEnum.hpp  CommandResult.hpp  OptionConcept.hpp  VersionCommand.cpp  VersionCommand.hpp
src/cli/src/constant/: cli_flags_constants.hpp  cli_string_constants.hpp
src/common/: CMakeLists.txt
src/common/src/error/: ErrorCode.cpp
src/formatter/: CMakeLists.txt
src/formatter/src/: Formatter.cpp
src/grammar/: CMakeLists.txt
src/grammar/src/: ScadLexer.g4  ScadParser.g4
src/linter/: CMakeLists.txt
src/linter/src/: Linter.cpp  ScadLinter.cpp
src/linter/src/visitor/: ScadLinter.cpp  ScadLinter.h
src/utility/: CMakeLists.txt
src/utility/src/: utility.cpp
test/: CMakeLists.txt
test/grammar/: CMakeLists.txt  function_tests.cpp
test/grammar/combined/: test_constants.hpp
test/grammar/lexer/: function_tests.cpp
